Fixing expansion click events and spacing. Spacing values are hardcoded for now.

--- a/wwwroot/app/components/node.component.css
+++ b/wwwroot/app/components/node.component.css
@@ -15,10 +15,10 @@
 .label-unselected { cursor: pointer; }
 
 .application-list { list-style: none; margin: 0; padding: 0; }
-.application { font-size:10px; position:relative; list-style: none; margin: 2px 0; padding: 1px 2px; border: 1px solid #000000; overflow:hidden }
+.application { font-size:10px; position:relative; list-style: none; margin: 2px 0; padding: 0 2px; border: 1px solid #000000; overflow:hidden }
 
 .service-list { list-style: none; margin: 0; padding: 0; }
-.service { font-size: 10px; position:relative; overflow:hidden; list-style: none; margin: 2px 0 0 15px; padding: 0; border: 1px solid #000000; }
+.service { font-size: 10px; position:relative; overflow:hidden; list-style: none; margin: 1px 0 0 15px; padding: 0; border: 1px solid #000000; }
 
 .replica-list { list-style: none; margin: 0; padding: 0; }
 .replica { list-style: none; margin: 0 0 0 15px; padding: 0; border: 1px solid #000000; }
